--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^21.0.0",
+    "jquery": "^3.2.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-radio-buttons": "^1.0.0",
