--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^21.0.0",
+    "expo": "^21.0.3",
     "jquery": "^3.2.1",
-    "react": "16.0.0-alpha.12",
+    "react": "^16.0.0",
     "react-native": "^0.48.4",
-    "react-native-radio-buttons": "^1.0.0",
-    "react-navigation": "^1.0.0-beta.13"
+    "react-native-elements": "^0.17.0",
+    "react-navigation": "^1.0.0-beta.15"
   }
 }
