--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "jquery": "^3.2.1",
     "react": "^16.0.0",
     "react-native": "^0.48.4",
+    "react-native-barcode-android": "^1.0.2",
+    "react-native-barcode-scanner-google": "git+https://github.com/ekreutz/react-native-barcode-scanner-google.git#v1.2.0",
+    "react-native-barcodescanner": "^3.1.1",
     "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.15"
   }
